src/objects/Panel_Application__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>it is a lookup to Application object to find particular Application</description>
        <label>Application</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Application3__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Application</value>
            </filterItems>
            <filterItems>
                <field>Application3__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Concept Paper</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Panel Applications</relationshipLabel>
        <relationshipName>Panel_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expert_Review_Panel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup to External Review panel object to find an External Review Panel</description>
        <label>External Review Panel</label>
        <referenceTo>Expert_Review_Panel__c</referenceTo>
        <relationshipLabel>Panel Applications</relationshipLabel>
        <relationshipName>Panel_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Panel_Id_Application_Id__c</fullName>
        <label>Panel Id Application Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Paneling__c</fullName>
        <label>Paneling</label>
        <referenceTo>Paneling__c</referenceTo>
        <relationshipLabel>Panel Applications</relationshipLabel>
        <relationshipName>Panel_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Panel Application</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Panel Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panel Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>